# race_car

./: README.md
auto_pilot_ml/: CMakeLists.txt  package.xml
auto_pilot_ml/scripts/: base_link_listener.py  fake_navigation.py  image_listener.py  naive_navigation.py  service_terminal_command.txt  teleop_record_server.py
auto_pilot_ml/srv/: teleop_record.srv
auto_pilot_param/: CMakeLists.txt  package.xml
auto_pilot_param/params/: racecar_params
auto_pilot_param/scripts/: generate_path2.py  image_listener.py  naive_controller.py  path_display.py  pure_pursuit_wrapper.py  write_param.py
eufs_description/meshes/: cone_red.dae
eufs_description/robots/: ads-dv.urdf.xacro  eufs.urdf.xacro
eufs_description/sensors/: VLP-16.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  basic.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  zed.urdf (copy).xarco  zed.urdf.xarco
eufs_description/worlds/: get_cone_pos.py  get_path.py  model_state.txt  race_training.world  smoothed_fake_central_path.txt
eufs_gazebo/: CMakeLists.txt
eufs_gazebo/launch/: big_track.launch  race_car_rviz.rviz  small_track.launch  training_track.launch
models/cone_blue/: model.config  model.sdf
models/cone_red/: model.config  model.sdf
models/race_ground/: model.config  model.sdf
scripts/: install_python2.sh  install_python3.sh
scripts/detect/: cone_detect.py  cone_detection_server_param.py  control_server.py  general.py  generate_path.py  generate_path2.py  naive_controller.py  pixel2car.py  pixel2car_param.py  (+1 more)
sim_simple_controller/: CMakeLists.txt  package.xml
sim_simple_controller/launch/: robot_control.launch  rqt_robot_control.launch
(+8 files in other folders)
